# Minecraft-translate

./: .gitignore  CHANGELOG.md  ITERATION_SOP.md  LICENSE  README.md  RELEASE_STRATEGY.md  config.example.json  main.py  pyproject.toml  release_notes_v0.6.0.md  replace_rules.json  test_main.py
.agentlens/: 01-main-py-review.md  02-app-review.md  03-translation-tool-review.md  INDEX.md  code-review.md
app/: __init__.py  services.py  startup_tasks.py  task_session.py  view_registry.py
docs/: DOCSTRING_SPEC.md  GH_WORKFLOW.md  PR40-58_REFACTOR_SUMMARY.md  PR_EXECUTION_TYPES.md  PR_ROADMAP_FUTURE.md  PR_WORKFLOW.md  RELEASE_WORKFLOW.md  ROADMAP_CURRENT.md  testing-style-note.md
scripts/: find_empty_docs.py  fix_docstrings.py  scan_docstrings.py  scan_missing_docs.py
tests/: conftest.py  test_bundler_view_characterization.py  test_cache_controller.py  test_cache_history_store.py  test_cache_manager_api_surface.py  test_cache_presenter.py  test_cache_search_orchestration.py  test_cache_shards.py  test_cache_state.py  test_cache_store.py  test_cache_view_features.py  test_cache_view_monkeypatch_integration.py  test_cache_view_state_gate.py  test_config_proxy_compat.py  test_config_view_characterization.py  test_extractor_view_characterization.py  test_ftb_pipeline_smoke.py  test_ftb_translator_clean.py  test_ftb_translator_export.py  test_icon_preview_view_characterization.py  test_jar_preview_report.py  test_jar_processor_extract.py  test_jar_processor_find.py  test_kubejs_cleaning.py  test_kubejs_path_resolution.py  test_kubejs_pipeline_steps.py  test_main_imports.py  (+32 more)
(+306 files in other folders)
